# Infinity-Fibre

./: Makefile  README.rst  pyproject.toml
infinity-fibre/: manage.py
infinity-fibre/core/utils/: collections.py  mics.py  settings.py
infinity-fibre/project/settings/: __init__.py  base.py  envvars.py
infinity-fibre/project/settings/templates/: settings.dev.py
